--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <main class="container">
         <section id="home" class="hero">
           <div class="hero-image">
-            <img src="" alt="">
+            <img src="images/wallpaper-cat.jpg" alt="Wallpaper Cat" />
           </div>
           <div class="hero-content">
-            <h2></h2>
+            <h2>Meowcome to our site!</h2>
           </div>
         </section>
         <section id="cats" class="call-to-action">
@@ -79,9 +79,9 @@
             <div class="team-values">
               <h3>Values</h3>
             </div>
-          </div>
-          <div class="team-meow">
-            <h3>Meow</h3>
+            <div class="team-meow">
+              <h3>Meow</h3>
+            </div>
           </div>
 
           <p>
@@ -96,7 +96,7 @@
         </section>
       </main>
       <footer>
-        &copy; 2016
+        &copy; Meow 2016
       </footer>
     </div>
   </body>
