some style to get started

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div>
-      <header>
+      <header class="topheader">
         <h1 class="logo">The Cat Shop</h1>
         <nav>
           <ul class="navbar">
@@ -37,7 +37,7 @@
             <h2>Meowcome to our site!</h2>
           </div>
         </section>
-        <section id="cats" class="call-to-action">
+        <section id="cats" class="cats">
           <h3>Cats</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias itaque quaerat, fugiat illo fugit expedita ullam voluptatibus dolorum illum ratione eum impedit totam minima nam magni quia nisi hic nostrum.
@@ -96,7 +96,7 @@
           </p>
         </section>
       </main>
-      <footer>
+      <footer class="bottomfooter">
         &copy; Meow 2016
       </footer>
     </div>
